modified the links

--- a/port.html
+++ b/port.html
@@ -43,7 +43,7 @@
             <ul class="list-none">
                 <li><a href="https://www.linkedin.com/in/shadabsshakeel/" target="_blank" ><img src="assets/linkedin.svg" class="icons" alt="Image"></a></li>
                 <li><a href="https://www.instagram.com/mr_sheikh297" target="_blank" ><img src="assets/instagram.svg" class="icons" alt="Image"></a></li>
-                <li><a href="https://www.linkedin.com/in/shadabsshakeel/" target="_blank" ><img src="assets/github.svg" class="icons" alt="Image"></a></li>
+                <li><a href="https://github.com/shadab767" target="_blank" ><img src="assets/github.svg" class="icons" alt="Image"></a></li>
             </ul>    
         </div>
 
@@ -166,7 +166,7 @@
                         <ul class="vertical-list">
                             <li><a href="https://www.linkedin.com/in/shadabsshakeel/" target="_blank" ><img src="assets/linkedin.svg" class="icons" alt="Image"></a></li>
                             <li><a href="https://www.instagram.com/mr_sheikh297" target="_blank" ><img src="assets/instagram.svg" class="icons" alt="Image"></a></li>
-                            <li><a href="https://www.linkedin.com/in/shadabsshakeel/" target="_blank" ><img src="assets/github.svg" class="icons" alt="Image"></a></li>
+                            <li><a href="https://github.com/shadab767" target="_blank" ><img src="assets/github.svg" class="icons" alt="Image"></a></li>
                         </ul>   
                     </div>
                 </div>
