added side menu

--- a/port.html
+++ b/port.html
@@ -27,6 +27,20 @@
                     <div><img class="circle-image" src="assets/profile.jpg" alt=""></div>
                     <div class="name">SHADAB SHAKEEL</div>
                 </div>
+
+                <div class="ham-menu">
+                    <img id="menu" class="menu-icon" src="assets/menu.svg" >
+                    <img id="close" class="xmark-icon d-none" src="assets/xmark.svg" alt="">
+                </div>
+
+                <div id="menu-links" class="menu-links">
+                    <ul>
+                        <li><a class="links" href="#home">HOME</a></li>
+                        <li><a class="links" href="#about">ABOUT</a></li>
+                        <li><a class="links" href="#projects">PROJECTS</a></li>
+                        <li><a class="links" href="#contacts">CONTACT</a></li>
+                    </ul>
+                </div>
     
                 <div class="sideLinks">
                     <ul>
