--- a/port.html
+++ b/port.html
@@ -137,7 +137,7 @@
             </div>
         </div>
 
-        <div id="contact" class="contacts">
+        <div id="contacts" class="contacts">
             <div class="about-info">
                 <h1 class="about-header"> CONTACT</h1>
                 <div class="divider"></div>
