--- a/port.html
+++ b/port.html
@@ -130,7 +130,7 @@
             <div class="about-info">
                 <h1 class="about-header"> PROJECTS</h1>
                 <div class="divider"></div>
-                <div class="about-text">Here you will find some of the personal projects that i created for practice</div>   
+                <div class="about-text">Here you will find some of the personal projects that I created for practice</div>   
                 <br>
                 <br>
                
